test/1.4/errors/T_EASTYPE.dml
/*
  © 2024 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;
device test;

template t {}
template u is t {}

is u;

method m() -> (t) {
    return cast(dev, t);
}

method init() {
    // Regression test for SIMICS-22874
    /// ERROR EASTYPE
    local u x = m();
}
